[package]
name = "brainmade-org"
version = "0.2.0"
edition = "2021"

[dependencies]
color-eyre = "*"
html-node = { version = "0.5.0", features = ["typed"] }
hypertext = "0.5.1"
lazy_static = "1.5.0"
maud = "0.26.0"
pulldown-cmark = "0.11.0"
rstml = "*"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
enum_glob_use = { level = "deny", priority = 1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
